# AoC

./: AoC.cabal  LICENSE  aoc2018.cabal  shell.nix
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Main.hs
