cabal-version: 2.1
name:          AoC
version:       0.1.0.0
synopsis:      Advent of Code solutions
author:        Gastón Tonietti
maintainer:    gaston@tonietti.dev

library
    hs-source-dirs:
        src
    default-language:
        Haskell2010
    default-extensions:
        NoImplicitPrelude
      , OverloadedStrings
    build-depends:
        base
      , containers
      , universum

