name:                aoc2018
version:             0.1.0.0
synopsis:            Advent of Code 2018
homepage:            https://github.com/ktonga/aoc2018
license:             MIT
license-file:        LICENSE
author:              Gaston Tonietti
maintainer:          gaston.tonietti@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.11 && <4.12, containers, split, list-zipper
  hs-source-dirs:      src
  default-language:    Haskell2010
